# OverFlow-DiscordBOT

./: .env.example  .gitignore  Makefile  README.md  bot.py  pyproject.toml  requirements-dev.txt  requirements.txt
Scrappers/: compete.py  stackoverflow.py
cogs/: basic.py  initialize.py  roles.py  web.py
