[tool.poetry]
name = "overflow-discordbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.14.0"
google = "^3.0.0"
requests = "^2.24.0"
lxml = "^4.5.2"
"discord.py" = "^1.5.0"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
